// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`browserslist target ["chrome 80"] 1`] = `
Object {
  "arrowFunction": true,
  "bigIntLiteral": true,
  "browser": true,
  "const": true,
  "destructuring": true,
  "document": true,
  "dynamicImport": true,
  "dynamicImportInWorker": true,
  "electron": false,
  "fetchWasm": true,
  "forOf": true,
  "global": false,
  "globalThis": true,
  "importScripts": false,
  "importScriptsInWorker": true,
  "module": true,
  "node": false,
  "nodeBuiltins": false,
  "nwjs": false,
  "require": false,
  "web": true,
  "webworker": false,
}
`;

exports[`browserslist target ["chrome 80.0"] 1`] = `
Object {
  "arrowFunction": false,
  "bigIntLiteral": false,
  "browser": true,
  "const": false,
  "destructuring": true,
  "document": true,
  "dynamicImport": false,
  "dynamicImportInWorker": false,
  "electron": false,
  "fetchWasm": true,
  "forOf": true,
  "global": false,
  "globalThis": true,
  "importScripts": false,
  "importScriptsInWorker": true,
  "module": false,
  "node": false,
  "nodeBuiltins": false,
  "nwjs": false,
  "require": false,
  "web": true,
  "webworker": false,
}
`;

exports[`browserslist target ["firefox 80 ","chrome 80"] 1`] = `
Object {
  "arrowFunction": false,
  "bigIntLiteral": false,
  "browser": true,
  "const": false,
  "destructuring": true,
  "document": true,
  "dynamicImport": false,
  "dynamicImportInWorker": false,
  "electron": false,
  "fetchWasm": true,
  "forOf": true,
  "global": false,
  "globalThis": true,
  "importScripts": false,
  "importScriptsInWorker": true,
  "module": false,
  "node": false,
  "nodeBuiltins": false,
  "nwjs": false,
  "require": false,
  "web": true,
  "webworker": false,
}
`;

exports[`browserslist target ["ie 11"] 1`] = `
Object {
  "arrowFunction": false,
  "bigIntLiteral": false,
  "browser": true,
  "const": true,
  "destructuring": false,
  "document": true,
  "dynamicImport": false,
  "dynamicImportInWorker": false,
  "electron": false,
  "fetchWasm": true,
  "forOf": false,
  "global": false,
  "globalThis": false,
  "importScripts": false,
  "importScriptsInWorker": true,
  "module": false,
  "node": false,
  "nodeBuiltins": false,
  "nwjs": false,
  "require": false,
  "web": true,
  "webworker": false,
}
`;

exports[`browserslist target ["node 6"] 1`] = `
Object {
  "arrowFunction": false,
  "bigIntLiteral": false,
  "browser": false,
  "const": false,
  "destructuring": true,
  "document": false,
  "dynamicImport": false,
  "dynamicImportInWorker": false,
  "electron": false,
  "fetchWasm": false,
  "forOf": true,
  "global": true,
  "globalThis": false,
  "importScripts": false,
  "importScriptsInWorker": true,
  "module": false,
  "node": true,
  "nodeBuiltins": true,
  "nwjs": false,
  "require": true,
  "web": false,
  "webworker": false,
}
`;

exports[`browserslist target ["node 6.0"] 1`] = `
Object {
  "arrowFunction": false,
  "bigIntLiteral": false,
  "browser": false,
  "const": false,
  "destructuring": true,
  "document": false,
  "dynamicImport": false,
  "dynamicImportInWorker": false,
  "electron": false,
  "fetchWasm": false,
  "forOf": true,
  "global": true,
  "globalThis": false,
  "importScripts": false,
  "importScriptsInWorker": true,
  "module": false,
  "node": true,
  "nodeBuiltins": true,
  "nwjs": false,
  "require": true,
  "web": false,
  "webworker": false,
}
`;

exports[`browserslist target ["node 6.0.0"] 1`] = `
Object {
  "arrowFunction": false,
  "bigIntLiteral": false,
  "browser": false,
  "const": false,
  "destructuring": true,
  "document": false,
  "dynamicImport": false,
  "dynamicImportInWorker": false,
  "electron": false,
  "fetchWasm": false,
  "forOf": true,
  "global": true,
  "globalThis": false,
  "importScripts": false,
  "importScriptsInWorker": true,
  "module": false,
  "node": true,
  "nodeBuiltins": true,
  "nwjs": false,
  "require": true,
  "web": false,
  "webworker": false,
}
`;
